update: update init project